--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is a test.
+4/11/2012:
+
+These tutorials are now a reboot of my developer skills inside of the Brave New World of all-multicore, all-the-time devices. These tutorials will be augmented with blocks-based code as well as agressive property usage and other runtime tricks as appropriate.
